No fixed $mol_string width. Stretch $mol_labeler content. $mol_form_field uses $mol_labeler right.

--- a/string/string.css
+++ b/string/string.css
@@ -12,7 +12,6 @@
 	z-index: 0;
 	font: inherit;
 	flex: 0 1 auto;
-	width: 8rem;
 	background: var(--mol_skin_passive);
 	color: var(--mol_skin_passive_text);
 }
